@@ -1,3 +1,7 @@
+2010-06-07
+    * Free keepalive connections on nginx shutdown.
+      Requested by Yichun Zhang (agentzh).
+
 2010-06-04
     * Use recently standardized error codes in RDS format.
 
